HW/3.Kubernetes/HW2/Task2/nginx-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-canary
spec:
  selector:
    matchLabels:
      app: nginx-canary
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-canary
        version: "2.0"
    spec:
      containers:
        - name: nginx-canary
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: nginx-canary
      volumes:
        - name: nginx-canary
          configMap:
            name: nginx-canary
            items:
            - key: index.html
              path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
spec:
  type: NodePort
  selector:
    app: nginx-canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
